# Equation-Solver-Toolkit

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/equation_solver/: core.py
src/equation_solver/equations/: __init__.py  thermo.py
tests/: test_core.py
